--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "ragapp"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.13"
+requires-python = ">=3.11"
 dependencies = [
     "fastapi>=0.118.0",
     "inngest>=0.5.9",
@@ -12,6 +12,6 @@ dependencies = [
     "openai>=1.109.1",
     "python-dotenv>=1.1.1",
     "qdrant-client>=1.15.1",
-    "streamlit>=1.50.0",
+    "requests>=2.31.0",
     "uvicorn>=0.37.0",
 ]
