--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "llama-index-readers-file>=0.5.4",
     "openai>=1.109.1",
     "python-dotenv>=1.1.1",
+    "python-multipart>=0.0.6",
     "qdrant-client>=1.15.1",
     "requests>=2.31.0",
     "uvicorn>=0.37.0",
